2015-07-01  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 35667: Src/lex.c, Src/zsh.h, Test/D03procsubst.ztst,
	Test/D08cmdsubst.ztst: fix command expansion which
	starts but does not finish within alias.

2015-06-29  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* unposted: Doc/Zsh/options.yo: fix formatting typo.

	* 35655: Doc/Zsh/options.yo, Src/exec.c, Src/options.c,
	Src/zsh.h: APPEND_CREATE option gives POSIX compatible behaviour
	for NO_CLOBBER.

2015-06-28  Barton E. Schaefer  <schaefer@zsh.org>

	* 35660: Functions/Prompts/prompt_adam1_setup: avoid perl, fix help

2015-06-29  Oliver Kiddle  <opk@zsh.org>

	* 35637: Src/Zle/zle.h, Src/Zle/zle_main.c, Src/Zle/zle_tricky.c:
	remove the now unused module hook for reverse-menu-complete

	* 35627: Src/Zle/compcore.c, Src/Zle/compctl.c, Src/Zle/complete.c,
	Src/Zle/complist.c, Src/Zle/compresult.c, Src/Zle/zle_tricky.c:
	make reverse-menu-complete start with last match in menu selection

	* 35623: Src/Zle/complist.c: fix menu-selection where initial
	selection would not be displayed without scrolling

2015-06-28  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 35643: Src/parse.c: redirections after typeset assignments
	were broken.

2015-06-27  Barton E. Schaefer  <schaefer@zsh.org>

	* 35642: Src/context.c: signal queueing in zcontext_save_partial()

	* 35634: Src/exec.c: handle failure of gettempname() in namedpipe()

2015-06-27  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 35635: Src/builtin.c: a bit more consistency about
	making elements of things local.

	* users/20281: Completion/Base/Core/_main_complete:
	don't require MULTIFUNCDEF as _main_complete is parsed
	before we can ensure it's set.

	* 35623: Src/builtin.c, Src/zsh.h, Test/B02typeset.ztst: 35610
	was incomplete: all is_array asignments should be treated as
	having a value.

2015-06-26  Barton E. Schaefer  <schaefer@zsh.org>

	* 35626: Doc/Zsh/options.yo: update POSIX_CD to note that it is on
	in ksh and sh emulations
